--- a/styles.css
+++ b/styles.css
@@ -56,19 +56,18 @@ p {
 .contacts img {
   width: 40px;
   height: 40px;
-  transition: 1s;
+  transition: all 0.6s ease-in-out;
 }
 
 .contacts img:hover {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   background-color: rgb(190, 195, 195);
   border-radius: 80%;
 }
 
 .main__info-photo {
   width: 33%;
-  justify-self: center;
   overflow: hidden;
   border: 10px solid #fff;
   box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
@@ -78,6 +77,7 @@ p {
   width: 100%;
   height: 100%;
 }
+
 @keyframes img-animate {
   0% {
     border-radius: 85% 15% 83% 17% / 11% 73% 27% 89%;
@@ -107,10 +107,121 @@ p {
 .fact__list {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   font-size: 18px;
   font-weight: 500;
   list-style-type: square;
 }
 .fact__list li {
   margin: 0 15px;
+}
+
+.slider {
+  max-width: 80%;
+  margin: 20px auto;
+  overflow: hidden;
+  box-shadow: 12px 11px 38px 8px rgba(34, 60, 80, 0.2);
+}
+
+.slider-line {
+  display: flex;
+  position: relative;
+  left: 0;
+  transition: all ease 1s;
+}
+.slider-line img {
+  border-radius: 6px;
+}
+
+.control__btns {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+.button {
+  border: none;
+  width: 100px;
+  height: 30px;
+  background-color: rgb(57, 57, 201, 0.8);
+  border-radius: 12px;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+.button:hover {
+  background-color: rgb(237, 22, 22, 0.7);
+}
+
+.footer {
+  background: #000000;
+  height: 100%;
+}
+.footer__text {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+@media all and (max-width: 753px) {
+  .main__info-photo {
+    width: 60%;
+  }
+  .main__info-title {
+    gap: 20px;
+  }
+  .fact__list {
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
+    line-height: 25px;
+  }
+  .footer__text {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+@media all and (max-width: 400px) {
+  .main__info {
+    gap: 20px;
+  }
+  .main__info-photo {
+    width: 75%;
+  }
+  .header__title h1 {
+    font-size: 20px;
+  }
+  h2,
+  h3,
+  h4,
+  p {
+    letter-spacing: 2px;
+    line-height: 30px;
+  }
+  .hero__info h2,
+  h3,
+  h4,
+  p {
+    font-size: 14px;
+  }
+  .contacts {
+    margin: 10px 0;
+  }
+  .contacts img {
+    width: 30px;
+    height: 30px;
+  }
+  .main__info-edu span {
+    font-size: 14px;
+  }
+  .facts__title {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  .fact__list li {
+    font-size: 12px;
+  }
+  .footer__text {
+    font-size: 16px;
+  }
 }
